--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,7 @@
       <div class="container">
 
         <p class="copyright">
-         Copyright &copy; 2024 K9TX  All Rights Reserved by <a href="#" class="copyright-link">Kartik Tripathi</a>
+         Copyright &copy; 2024 K9TX. All Rights Reserved by <a href="#" class="copyright-link">Kartik Tripathi</a>
         </p>
 
         <ul class="social-list">
